footer på events side

--- a/css/events.css
+++ b/css/events.css
@@ -229,6 +229,7 @@ h2 {
     position: relative;
     width: 275px;
     height: 275px;
+    margin-bottom: 7rem;
 }
 .oel{
     border-radius: 34px;
@@ -261,10 +262,30 @@ h2 {
     z-index: 1;
     object-fit: cover;
 }
-.footerhr {
-    margin-bottom: 2rem;
-    margin-top: 8rem;
+
+.footerbox {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 3rem;
 }
+
+.aabningstider {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    line-height: 2rem;
+    text-align: center;
+}
+
+.kontaktmig {
+    line-height: 2rem;
+    text-align: center;
+}
+
+.roundlogo {
+    margin-bottom: 2rem;
+}
+
 .instagramlogo {
     width: 2rem;
     height: 2rem;
@@ -279,14 +300,6 @@ h2 {
 .logoer{
     display: flex;
     justify-content: center;
-}
-
-.footerinfo{
-    text-align: center;
-    padding-top: 5px;
-}
-.roundlogo {
-    display: none;
 }
 }
 
@@ -529,14 +542,16 @@ height: 120%;
 z-index: 1;
 object-fit: cover;
 }
+
 .footerhr {
     margin-bottom: 2rem;
 }
+
 .footerbox {
     display: flex;
     justify-content: space-between;
-    margin-left:2rem ;
-    margin-bottom: 2rem;
+    margin: 2rem;
+    flex-direction: row;
 }
 
 .socialmediabox {
@@ -546,45 +561,34 @@ object-fit: cover;
     justify-content: center;
     font-size: 1.5rem;
 }
+
 .instagramlogo {
     width: 5rem;
     height: 5rem;
     margin-right: 1rem;
     margin-top: 2rem;
-
 }
+
 .facebooklogo {
     width: 5rem;
     height: 5rem;
     margin-top: 2rem;
 }
 
-.logoer{
+.logoer {
     display: flex;
     justify-content: center;
 }
 
-.footerinfo{
-    text-align: center;
-    font-size: 1.5rem;
-    padding-top: 5px;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-}
-button {
-    font-size: 2rem;
-}
-.pbottom {
-    padding-bottom: 2rem;
-}
 .aabningstider {
-display: flex;
-flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    line-height: 2rem;
 }
+
 .kontaktmig {
     display: flex;
     flex-direction: column;
-    margin-right: 2rem;
+    line-height: 2rem;
 }
 }
