--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@
 header {
     padding: 30px;
 }
+
 hr {
     border-color: #da7897;
 }
@@ -102,6 +103,7 @@ h2 {
     font-family: playfairdisplay;
     padding-bottom: 1rem;
 }
+
 .infotext {
     font-size: 1rem;
     text-align: justify;
@@ -109,6 +111,7 @@ h2 {
     padding-left: 3rem;
     padding-right: 3rem;
 }
+
 .bowl {
     border-radius: 44px;
     position: absolute;
@@ -118,8 +121,8 @@ h2 {
     height: 90%;
     z-index: 1;
     object-fit: cover;
-    
 }
+
 .bolle {
     border-radius: 34px;
     position: absolute;
@@ -129,8 +132,8 @@ h2 {
     height: 50%;
     z-index: 3;
     object-fit: cover;
-   
 }
+
 .avocado {
     border-radius: 44px;
     border-color: #da7897;
@@ -142,18 +145,18 @@ h2 {
     z-index: 2;
     object-fit: cover;
 }
+
 .imagesfrontmenu {
     position: relative;
     width: 275px;
     height: 275px;
-
 }
-
 
 .menukortlinkdesktop {
     display: none;
 }
 
+/*Designer hvordan menu kanppen ser ud på forsiden*/
 .menukortlink {
     text-decoration: none;
     color: black;
@@ -193,7 +196,6 @@ h2 {
     position: relative;
     width: 275px;
     height: 275px;
-    
 }
 
 .run{
@@ -216,8 +218,8 @@ h2 {
     height: 50%;
     z-index: 3;
     object-fit: cover;
-   
 }
+
 .strik {
     border-radius: 44px;
     border-color: #da7897;
@@ -254,10 +256,11 @@ h2 {
 
 
 
-
+/*LOKATION STARTER*/
 .lokationh2 {
     padding-top: 8rem;
 }
+
 .lokationshr {
     margin-left: 30px;
     margin-right: 30px;
@@ -287,7 +290,6 @@ h2 {
     height: 90%;
     z-index: 1;
     object-fit: cover;
-    
 }
 
 .lokationlink {
@@ -313,19 +315,27 @@ h2 {
     font-family: playfairdisplay;
     font-weight: bold;
 }
+
+
+
+
+/*REVIEW STARTER*/
 .reviewh2 {
     padding-top: 8rem;
 }
+
 .reviewhr {
     margin-left: 30px;
     margin-right: 30px;
 }
+
 .reviewboks {
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+
 .haticeboks {
     border: 3px solid #da7897;
     border-radius: 10px;
@@ -334,6 +344,7 @@ h2 {
     padding-top: 1rem;
     padding-bottom: 3rem;
 }
+
 .lotteboks {
     border: 3px solid #da7897;
     border-radius: 10px;
@@ -342,6 +353,7 @@ h2 {
     padding-top: 1rem;
     padding-bottom: 3rem;
 }
+
 .galboks{
     border: 3px solid #da7897;
     border-radius: 10px;
@@ -350,14 +362,17 @@ h2 {
     padding-top: 1rem;
     padding-bottom: 3rem;
 }
+
 .hatice {
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
+
 .lotte {
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
+
 .gal {
     margin-top: 1rem;
     margin-bottom: 1rem;
