--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-* {
+* { /*Nulstiller hjemmesidens værdier*/
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -16,6 +16,7 @@
     * {
         font-family: playfairdisplay;
     }
+    
         body {
             background: linear-gradient(180deg, #ffff99, #ffffff) ;
         }
